fix(css) collapse

--- a/src/components/Collapse/style.scss
+++ b/src/components/Collapse/style.scss
@@ -14,4 +14,9 @@
   .icone span {
     font-size:20px;
   }
+  .icone span {
+  
+    margin-right:5px;
+    font-size:20px;
+ }
 }
